--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,10 +7,11 @@
     <link href="base.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         <nav>
         <ul>
+            <li class="logo">&starf;</li> 
             <li><a href="index.html">index </a></li>
             <li><a href="tweets.html">tweets </a></li>
         </ul>
