--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-<script src="https://kit.fontawesome.com/342068dabe.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/342068dabe.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
