--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="custom-bg">
             <header>
                 <h1>Get schooled</h1>
                 <span>SMILES</span>
